@@ -232,7 +232,11 @@ class MediaControllerRoot extends IndividualController{
 			}
 
 			// main link displayed on page
-			$submenu = new Menu($pgv_lang["set_link"]." >");
+			if (PGV_USER_GEDCOM_ADMIN && file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php')) {
+				$submenu = new Menu($pgv_lang["add_or_remove_links"]." >");
+			} else {	
+				$submenu = new Menu($pgv_lang["set_link"]." >");
+			}
 			$submenu->addOnclick("return ilinkitem('".$this->pid."','person');");
 			$submenu->addClass("submenuitem$ff", "submenuitem_hover$ff", "submenu$ff");
 
