@@ -746,7 +746,7 @@ if (check_media_structure()) {
 		
 		// GEDFact assistant Add Media Links =======================
 		if (file_exists('modules/GEDFact_assistant/MEDIA/media_1_ctrl.php')) {
-			$menu->addLabel("Add or Remove Links");
+			$menu->addLabel($pgv_lang["add_or_remove_links"]);
 		} else {
 			$menu->addLabel($pgv_lang["set_link"]);
 		}
